All day 5 and 6 fixed